Fix navbar links spacing

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@ header {
 
 nav > ul {
     display: flex;
+    gap: 1rem;
 }
 
 li {
@@ -30,7 +31,7 @@ nav > ul > li:hover {
 a {
     color: inherit;
     text-decoration: none;
-    padding: 1rem;
+    /* padding: 1rem; */
 }
 
 .my-name {
